# ziboCockpitProject

./: .gitignore  CMakeLists.txt  CmdWindowOutput.txt  Flight Illusion data transfer protocol to gauges.txt  SimConfig.yaml  over_head.txt  overhead_edits.txt  sim737.ini
cockpit/: CMakeLists.txt  aircraft_model.cpp  aircraft_model.hpp  aircraft_model_init_data.cpp  aircraft_model_init_str.cpp  aircraft_parameters.hpp  client.h  data_ref_name.hpp  sim_configuration.cpp  sim_configuration.hpp  sim_configuration_base.hpp  z737_annun_data.hpp  z737_switch_data.hpp
cockpit/gui/: mainWindow.cpp  mainWindow.h  mainWindow.hpp  xplane_status.cpp  zcockpitApp.cpp  zcockpitApp.h  zcockpitApp.hpp
cockpit/gui/wxfb/: MainFrame.fbp  mainApp.cpp  mainApp.h
cockpit/hardware/: DeleteMeHotkey.h  health.hpp  sim737_hardware.cpp  sim737_hardware.hpp  util.cpp  util.hpp  zcockpit_switch.hpp
cockpit/hardware/InterfaceIT/: HidInterfaceIT.cpp  HidInterfaceIT.hpp  interfaceITAPI_Data.h  interfaceit.cpp  interfaceit.hpp
cockpit/hardware/flight_illusion/: ficontroller.cpp  ficontroller.hpp  fidevice.cpp  fidevice.hpp
cockpit/hardware/ftd2xx/: ftd2xxdevices_wrapper.cpp  ftd2xxdevices_wrapper.hpp
cockpit/hardware/ioCards/: fwd_overhead_init_data.hpp  fwd_overhead_iocard.cpp  fwd_overhead_iocard.hpp  iocards.cpp  iocards.h  iocards.hpp  mip_iocard.cpp  mip_iocard.hpp  mipiocards.cpp  mipiocards.h  ovrheadiocards.cpp  ovrheadiocards.h  rear_overhead_init_data.hpp  rear_overhead_iocard.cpp  rear_overhead_iocard.hpp  rearovrheadiocards.cpp  rearovrheadiocards.h  usbworker.cpp  usbworker.h
cockpit/hardware/throttle/: throttle_hardware.hpp  throttle_joystick.cpp  throttle_joystick.hpp
cockpit/hardware/throttle/Pokeys/: PoKeysLib.cpp  PoKeysLib.h  stepper.cpp  stepper.hpp
cockpit/hardware/throttle/Vjoy/: VjoyFeeder.h  vjoyFeeder.cpp
cockpit/hardware/transponder/: transponder.cpp  transponder.hpp
cockpit/hardware/usb/: hidapi.c  hidapi.h  libusb_interface.cpp  libusb_interface.hpp  usbrelay.cpp  usbrelay.hpp
cockpit/websocket/: websocket_client.cpp  websocket_client.hpp  websocket_server_NOTUSED.cpp  websocket_server_NOTUSED.hpp
common/: CMakeLists.txt  almost_equal.hpp  logger.cpp  logger.hpp  packet.cpp  packet.hpp  queue.hpp  shared_types.hpp  udp_interface.hpp  util.cpp  util.hpp  xp_command.cpp  xp_command.hpp  xp_command_repository.cpp  xp_command_repository.hpp  xp_data_ref.cpp  xp_data_ref.hpp  xp_data_ref_repository.cpp  xp_data_ref_repository.hpp
common/network/: connection.hpp  end_point.hpp  multicast_controller.hpp  udp.cpp  udp.hpp  udp_controller.hpp
plugin/: CMakeLists.txt  plugin_api.cpp  server.cpp  server.hpp  zbo_cockpit_plugin.cpp  zbo_cockpit_plugin.hpp
tests/integration_tests/: CMakeLists.txt  multicast_server.cpp
tests/shell_test/test/: first_test.sh
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/cockpit/: test_data_refs.cpp  test_server.cpp
tests/unit_tests/common/: test_connection.cpp  test_multicast_controller.cpp  test_packets.cpp  test_udp.cpp
tests/unit_tests/low_level_tests/: test_double_almost_equal.cpp  test_float_almost_equal.cpp  test_queue.cpp
tests/unit_tests/mocks/: connection_mock.hpp  socket_mock.cpp  socket_mock.hpp  udp_mock.cpp  udp_mock.hpp  xplane_mock.cpp  xplane_mock.hpp
